seo, tailwind 세팅

--- a/portfolio2023_vite/pages/projects/index.html
+++ b/portfolio2023_vite/pages/projects/index.html
@@ -30,7 +30,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="pageContainer"></div>
+  <div id="pageContainer" class="page-container"></div>
   <script type="module" src="../page.jsx"></script>
 </body>
 </html>
