--- a/portfolio2023_vite/pages/index.html
+++ b/portfolio2023_vite/pages/index.html
@@ -27,7 +27,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Noto+Serif+KR&display=swap" rel="stylesheet">
+
+  <script src="/js/common/crossbrowsing.js"></script>
 </head>
 <body>
   <div id="pageContainer" class="page-container"></div>
