작업중 - favicon 틀 추가 - 바깥 클릭으로 닫기 - tailwind 선택자 활용 확장

--- a/portfolio2023_vite/pages/projects/index.html
+++ b/portfolio2023_vite/pages/projects/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,15 +41,17 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-icon-192x192.png">
   <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Noto+Serif+KR&display=swap" rel="stylesheet">
 
   <script src="/js/common/crossbrowsing.js"></script>
 </head>
+
 <body>
-  <div id="pageContainer" class="page-container"></div>
+  <div id="pageContainer" class="page-container w-full min-h-full"></div>
   <script type="module" src="../page.jsx"></script>
 </body>
+
 </html>
