--- a/portfolio2023_vite/pages/index.html
+++ b/portfolio2023_vite/pages/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,8 +48,10 @@
 
   <script src="/js/common/crossbrowsing.js"></script>
 </head>
+
 <body>
-  <div id="pageContainer" class="page-container"></div>
+  <div id="pageContainer" class="page-container w-full min-h-full"></div>
   <script type="module" src="./page.jsx"></script>
 </body>
+
 </html>
