패럴랙스 작업중

--- a/portfolio2023_vite/pages/projects/index.html
+++ b/portfolio2023_vite/pages/projects/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <div id="pageContainer" class="page-container w-full min-h-full"></div>
+  <div id="pageContainer" class="page-container"></div>
   <script type="module" src="../page.jsx"></script>
 </body>
 
