--- a/deploy_vite/projects/index.html
+++ b/deploy_vite/projects/index.html
@@ -45,12 +45,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Noto+Serif+KR&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="../assets/page-da569c63.js"></script>
-  <link rel="stylesheet" href="../assets/page-a375deb0.css">
+  <script type="module" crossorigin src="../assets/page-452522c1.js"></script>
+  <link rel="stylesheet" href="../assets/page-fb3bb8ba.css">
 </head>
 
 <body>
-  <div id="pageContainer" class="page-container w-full min-h-full"></div>
+  <div id="pageContainer" class="page-container"></div>
   
 </body>
 
