섹션 상태 구조 추가

--- a/portfolio2023_vite/pages/index.html
+++ b/portfolio2023_vite/pages/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <div id="pageContainer" class="page-container"></div>
+  <main id="pageContainer" class="page-container"></main>
   <script type="module" src="./page.jsx"></script>
 </body>
 
