인트로페이지 테스트중

--- a/portfolio2023_vite/pages/projects/index.html
+++ b/portfolio2023_vite/pages/projects/index.html
@@ -48,7 +48,11 @@
 </head>
 
 <body>
-  <main id="pageContainer" class="page-container"></main>
+  <main id="pageContainer" class="page-container">
+    <div class="intro-container" style="width:100%;height:100%;position:fixed;top:0;left:0;z-index:999999;background:#1a1a1a;display:flex;align-items:center;justify-content:center;">
+      <h1 style="font-size:120px;color:#707070;line-height:120px;font-weight:900;letter-spacing:-1px;">Projects</h1>
+    </div>
+  </main>
   <script type="module" src="../page.jsx"></script>
 </body>
 
