--- a/deploy_vite/index.html
+++ b/deploy_vite/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="프론트엔드 엔지니어 류대현 포트폴리오">
   <meta property="og:description" content="프론트엔드 엔지니어 / 웹 퍼블리셔 류대현입니다.">
-  <meta property="og:image" content="/img/common/site_thumb.jpg">
+  <meta property="og:image" content="./img/common/site_thumb.jpg">
   <meta property="og:url" content="ryudh.com">
 
   <meta name="robots" content="noindex, nofollow">
