--- a/deploy_vite/projects/index.html
+++ b/deploy_vite/projects/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="프론트엔드 엔지니어 류대현 포트폴리오">
   <meta property="og:description" content="프론트엔드 엔지니어 / 웹 퍼블리셔 류대현입니다.">
-  <meta property="og:image" content="./img/common/site_thumb.jpg">
+  <meta property="og:image" content="https://graffitoryu.github.io/portfolio2023/deploy_vite/img/common/site_thumb.jpg">
   <meta property="og:url" content="ryudh.com">
 
   <meta name="robots" content="noindex, nofollow">
@@ -45,12 +45,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Noto+Serif+KR&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="../assets/page-b177048d.js"></script>
-  <link rel="stylesheet" href="../assets/page-95a22511.css">
+  <script type="module" crossorigin src="../assets/page-648f1d83.js"></script>
+  <link rel="stylesheet" href="../assets/page-1b132e96.css">
 </head>
 
 <body>
-  <main id="pageContainer" class="page-container"></main>
+  <main id="pageContainer" class="page-container">
+    <!-- <p style="font-size:100px;color:#000;font-weight:700;">프로젝트 | 포트폴리오</p> -->
+  </main>
   
 </body>
 
