--- a/portfolio2023_vite/pages/index.html
+++ b/portfolio2023_vite/pages/index.html
@@ -14,8 +14,8 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="프론트엔드 엔지니어 류대현 포트폴리오">
   <meta property="og:description" content="프론트엔드 엔지니어 / 웹 퍼블리셔 류대현입니다.">
-  <meta property="og:image" content="https://graffitoryu.github.io/portfolio2023/deploy_vite/img/common/site_thumb.jpg">
-  <meta property="og:url" content="ryudh.com">
+  <meta property="og:image" content="https://ryudh.com/img/common/site_thumb.jpg">
+  <meta property="og:url" content="https://ryudh.com/">
 
   <meta name="robots" content="noindex, nofollow">
   <meta name="Googlebot" content="noindex, nofollow">
