--- a/deploy_vite/index.html
+++ b/deploy_vite/index.html
@@ -14,8 +14,8 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="프론트엔드 엔지니어 류대현 포트폴리오">
   <meta property="og:description" content="프론트엔드 엔지니어 / 웹 퍼블리셔 류대현입니다.">
-  <meta property="og:image" content="https://graffitoryu.github.io/portfolio2023/deploy_vite/img/common/site_thumb.jpg">
-  <meta property="og:url" content="ryudh.com">
+  <meta property="og:image" content="https://ryudh.com/img/common/site_thumb.jpg">
+  <meta property="og:url" content="https://ryudh.com/">
 
   <meta name="robots" content="noindex, nofollow">
   <meta name="Googlebot" content="noindex, nofollow">
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Noto+Serif+KR&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="./assets/page-f5613e5b.js"></script>
+  <script type="module" crossorigin src="./assets/page-9e3d7dfa.js"></script>
   <link rel="stylesheet" href="./assets/page-1b132e96.css">
 </head>
 
