--- a/portfolio2023_vite/pages/projects/index.html
+++ b/portfolio2023_vite/pages/projects/index.html
@@ -36,9 +36,9 @@
   <link rel="apple-touch-icon" sizes="144x144" href="https://ryudh.com/favicon/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="https://ryudh.com/favicon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="https://ryudh.com/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://ryudh.com/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://ryudh.com/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="https://ryudh.com/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ryudh.com/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ryudh.com/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ryudh.com/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="192x192" href="https://ryudh.com/favicon/android-icon-192x192.png">
   <meta name="msapplication-TileImage" content="https://ryudh.com/favicon/ms-icon-144x144.png">
 
