--- a/deploy_vite/projects/index.html
+++ b/deploy_vite/projects/index.html
@@ -36,17 +36,17 @@
   <link rel="apple-touch-icon" sizes="144x144" href="https://ryudh.com/favicon/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="https://ryudh.com/favicon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="https://ryudh.com/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://ryudh.com/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://ryudh.com/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="https://ryudh.com/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ryudh.com/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ryudh.com/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://ryudh.com/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="192x192" href="https://ryudh.com/favicon/android-icon-192x192.png">
   <meta name="msapplication-TileImage" content="https://ryudh.com/favicon/ms-icon-144x144.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Noto+Serif+KR&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="../assets/page-9e3d7dfa.js"></script>
-  <link rel="stylesheet" href="../assets/page-1b132e96.css">
+  <script type="module" crossorigin src="../assets/page-3c28d5d5.js"></script>
+  <link rel="stylesheet" href="../assets/page-6af02df4.css">
 </head>
 
 <body>
